--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,11 @@
-astroid==2.5.2
-attrs==20.3.0
-certifi==2020.6.20
+certifi==2023.7.22
 chardet==3.0.4
-EasyProcess==0.3
+colorama==0.4.6
+configparser==6.0.0
+crayons==0.4.0
 idna==2.10
-iniconfig==1.1.1
-isort==5.8.0
-lazy-object-proxy==1.6.0
-mccabe==0.6.1
-packaging==20.9
-pluggy==0.13.1
-py==1.10.0
-pylint==2.7.4
-pyparsing==2.4.7
-pytest==6.2.2
-PyVirtualDisplay==2.1
+python-dotenv==1.0.0
 requests==2.24.0
 selenium==3.141.0
-toml==0.10.2
-urllib3==1.25.10
-wrapt==1.12.1
-xvfbwrapper==0.2.9
+urllib3==1.25.11
 webdriver-manager==3.4.2
